--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ relative_permalinks: true
 # Setup
 title:            Keep-Calm
 tagline:          Crowdsourced anti-bullying tool
-url:              http://gavra0.github.io/keep-calm
+url:              /keep-calm/
 paginate:         1
-baseurl:          /
+baseurl:          http://gavra0.github.io/
 author:
   name:           Ivan Gavrilovic / Tiziano Signo
 
