--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title:            Keep-Calm
 tagline:          Crowdsourced anti-bullying tool
 url:              /
 paginate:         1
-baseurl:          http://gavra0.github.io/keep-calm
+baseurl:          http://gavra0.github.io/keep-calm/
 author:
   name:           Ivan Gavrilovic / Tiziano Signo
 
