--- a/manifest.json
+++ b/manifest.json
@@ -27,5 +27,7 @@
       "run_at": "document_end"
     }
   ],
-  "content_security_policy": "script-src 'self'; object-src 'self'"
+  "web_accessible_resources": [
+    "images/*.png"
+  ]
 }
