--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "description": "Crowdsourced anti-bullying tool",
   "version": "2.0",
   "permissions": [
+    "tabs",
     "activeTab",
     "contextMenus",
     "webRequest",
@@ -30,5 +31,9 @@
   "web_accessible_resources": [
     "images/*.png",
     "images/*.gif"
-  ]
+  ],
+  "browser_action": {
+    "default_icon": "icon-48.png",
+    "default_popup": "popup.html"
+  }
 }
